--- a/.github/workflows/stage6deploy.yml
+++ b/.github/workflows/stage6deploy.yml
@@ -37,14 +37,14 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    # Update the VM with secure token passing
-    - name: Azure VMSS Update
+    # Update the VMSS with secure token passing
+    - name: Update VMSS
       run: |
         az vmss extension set \
           --resource-group ${{ secrets.RESOURCE_GROUP }} \
           --vmss-name ${{ secrets.VMSS_NAME }} \
           --name CustomScript \
-          --force-update \
           --publisher Microsoft.Azure.Extensions \
+          --version 2.0 \
           --settings '{"fileUris": []}' \
           --protected-settings '{"commandToExecute": "export GITHUB_TOKEN=${{ secrets.TOKEN }} && sudo -u azureuser bash /home/azureuser/chatbot-project-SDA/update_app.sh"}'
