--- a/.github/workflows/stage6deploy.yml
+++ b/.github/workflows/stage6deploy.yml
@@ -37,13 +37,20 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
+    # Start VMSS if turned off
+    - name: Start VMSS
+      run: |
+        az vmss start \
+          --resource-group ${{ secrets.RESOURCE_GROUP }} \
+          --name ${{ secrets.VMSS_NAME }}
+
     # Update the VMSS with secure token passing
-    - name: Update VMSS
+    - name: Update VMSS with Secure Token Passing
       run: |
         az vmss extension set \
           --resource-group ${{ secrets.RESOURCE_GROUP }} \
           --vmss-name ${{ secrets.VMSS_NAME }} \
-          --name CustomScript \
+          --name customScript \
           --publisher Microsoft.Azure.Extensions \
           --version 2.0 \
           --settings '{"fileUris": []}' \
