--- a/.github/workflows/stage6deploy.yml
+++ b/.github/workflows/stage6deploy.yml
@@ -51,6 +51,7 @@ jobs:
           --resource-group ${{ secrets.RESOURCE_GROUP }} \
           --vmss-name ${{ secrets.VMSS_NAME }} \
           --name customScript \
+          --force-update \
           --publisher Microsoft.Azure.Extensions \
           --version 2.0 \
           --settings '{"fileUris": []}' \
