--- a/.github/workflows/stage6deploy.yml
+++ b/.github/workflows/stage6deploy.yml
@@ -51,7 +51,7 @@ jobs:
           --resource-group ${{ secrets.RESOURCE_GROUP }} \
           --vmss-name ${{ secrets.VMSS_NAME }} \
           --name CustomScript \
+          --force-update \
           --publisher Microsoft.Azure.Extensions \
-          --version 2.0 \
-          --settings "{'fileUris': []}" \
-          --protected-settings "{\"commandToExecute\": \"export GITHUB_TOKEN=${{ secrets.TOKEN }} && sudo -u azureuser bash /home/azureuser/chatbot-project-SDA/update_app.sh\"}"
+          --settings '{"fileUris": []}' \
+          --protected-settings '{\"commandToExecute\": \"export GITHUB_TOKEN=${{ secrets.TOKEN }} && sudo -u azureuser bash /home/azureuser/chatbot-project-SDA/update_app.sh"}'
