--- a/.github/workflows/stage6deploy.yml
+++ b/.github/workflows/stage6deploy.yml
@@ -54,4 +54,4 @@ jobs:
           --force-update \
           --publisher Microsoft.Azure.Extensions \
           --settings '{"fileUris": []}' \
-          --protected-settings '{\"commandToExecute\": \"export GITHUB_TOKEN=${{ secrets.TOKEN }} && sudo -u azureuser bash /home/azureuser/chatbot-project-SDA/update_app.sh"}'
+          --protected-settings "{\"commandToExecute\": \"export GITHUB_TOKEN=${{ secrets.TOKEN }} && sudo -u azureuser bash /home/azureuser/chatbot-project-SDA/update_app.sh\"}"
