--- a/.github/workflows/stage6deploy.yml
+++ b/.github/workflows/stage6deploy.yml
@@ -10,47 +10,40 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # Checkout the repository
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    # Set up Python environment
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.11'
-        cache: 'pip'  
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+          cache: 'pip'
 
-    # Install dependencies
-    - name: Install dependencies
-      run: |
-        pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
 
-    # Run tests
-    - name: Run tests
-      run: |
-        echo "Run tests"
+      - name: Run tests
+        run: |
+          echo "Run tests"
 
-    # Login to Azure
-    - name: Azure Login
-      uses: azure/login@v2.2.0
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - name: Azure Login
+        uses: azure/login@v2.2.0
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    # Start VMSS if turned off
-    - name: Start VMSS
-      run: |
-        az vmss start \
-          --resource-group ${{ secrets.RESOURCE_GROUP }} \
-          --name ${{ secrets.VMSS_NAME }}
+      - name: Start VMSS
+        run: |
+          az vmss start --resource-group ${{ secrets.RESOURCE_GROUP }} --name ${{ secrets.VMSS_NAME }}
 
-    # Update the VMSS with secure token passing
-    - name: Update VMSS with Secure Token Passing
-      run: |
-        az vmss extension set \
-          --resource-group ${{ secrets.RESOURCE_GROUP }} \
-          --vmss-name ${{ secrets.VMSS_NAME }} \
-          --name CustomScript \
-          --force-update \
-          --publisher Microsoft.Azure.Extensions \
-          --settings '{"fileUris": []}' \ser bash /home/azureuser/chatbot-project-SDA/update_app.sh\"}"
+      - name: Update VMSS 
+        run: |
+          az vmss extension set \
+            --resource-group ${{ secrets.RESOURCE_GROUP }} \
+            --vmss-name ${{ secrets.VMSS_NAME }} \
+            --name customScript \
+            --publisher Microsoft.Azure.Extensions \
+            --version 2.0 \
+            --force-update \
+            --settings '{"fileUris": []}' \
+            --protected-settings "{\"commandToExecute\": \"export GITHUB_TOKEN=${{ secrets.TOKEN }} && sudo -u azureuser bash /home/azureuser/chatbot-project-SDA/update_app.sh\"}"
