--- a/.github/workflows/stage-7-af_backend-service-chatbot.yml
+++ b/.github/workflows/stage-7-af_backend-service-chatbot.yml
@@ -75,13 +75,13 @@ jobs:
 
       - name: Set Application Settings
         run: |
-          az functionapp config appsettings set --name backend-service-2025 --resource-group DemoVmSDA --settings "FUNCTIONS_WORKER_RUNTIME=python" "KEY_VAULT_NAME=sdakeyvault2025" "APPINSIGHTS_INSTRUMENTATIONKEY=azurerm_application_insights.ai.instrumentation_key"
+          az functionapp config appsettings set --name backend-service-chatbot --resource-group SDA-chatbot-project --settings "FUNCTIONS_WORKER_RUNTIME=python" "KEY_VAULT_NAME=sda-chatbot-keyvault" "APPINSIGHTS_INSTRUMENTATIONKEY=azurerm_application_insights.ai.instrumentation_key"
 
       - name: 'Deploy to Azure Functions'
         uses: Azure/functions-action@v1
         id: deploy-to-function
         with:
-          app-name: 'backend-service-2025'
+          app-name: 'backend-service-chatbot'
           slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
           scm-do-build-during-deployment: true
