--- a/.github/workflows/stage-7-af_backend-service-chatbot.yml
+++ b/.github/workflows/stage-7-af_backend-service-chatbot.yml
@@ -69,9 +69,7 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_F4CEAB06A1554B2FB0AC95869EFBC883 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_BF32BF4BCFDB4F99AE0608CEA3D5DD88 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_39722340F2C249749B97A7EEA13E8EC1 }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Set Application Settings
         run: |
