--- a/.github/workflows/stage-7-af_backend-service-01.yml
+++ b/.github/workflows/stage-7-af_backend-service-01.yml
@@ -35,12 +35,12 @@ jobs:
           source venv/bin/activate
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r requirements.txt --target=".python_packages/lib/site-packages"
 
       # Optional: Add step to run tests here
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip -r release.zip ./* .python_packages/*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -73,6 +73,9 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_4F7BD900BED34952B3206D9F20EC65ED }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_100E9009492F4D42AE4A98B8BCF428B5 }}
 
+      - name: Set Application Settings
+        run: |
+          az functionapp config appsettings set --name backend-service-01 --resource-group chatbot-app --settings "FUNCTIONS_WORKER_RUNTIME=python" "KEY_VAULT_NAME=chatbot-keyvault001" "APPINSIGHTS_INSTRUMENTATIONKEY=azurerm_application_insights.ai.instrumentation_key"
       - name: 'Deploy to Azure Functions'
         uses: Azure/functions-action@v1
         id: deploy-to-function
